# astrbot-plugin-dashview

./: .gitignore  LICENSE  README.md  __init__.py  _conf_schema.json  background.py  data.py  htmlBuilder.py  main.py  metadata.yaml  output_test.html  pyproject.toml  render_test.py  requirements.txt  test.py  utils.py
data/: collectors.py
renderers/: py_renderer.py  t2i_renderer.py
resources/: index.css
resources/css/: index.css
resources/templates/: index.html.jinja  macros.html.jinja
utils/: computer.py  htmlBuilder.py  image.py  modelProbe.py  monitor.py  render.py  service.py  summary.py  version.py
